--- a/.env
+++ b/.env
@@ -18,3 +18,16 @@
 APP_ENV=dev
 APP_SECRET=ef27255ac6d55186e16eafa49a62e62a
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/app?serverVersion=mariadb-10.8.3&charset=utf8mb4"
+# DATABASE_URL="mysql://root:root@127.0.0.1:3306/learning?serverVersion=mariadb-10.8.3"
+###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://0.0.0.0:1025
+###< symfony/mailer ###
